--- a/privacy.html
+++ b/privacy.html
@@ -69,21 +69,21 @@ Certain third parties assist us in providing the best gaming experience, such as
 <p>
 Processing of Your Information with Unity and Unity Ads
 <p>
-We use Unity and Unity Ads in “sultanware” to enhance the gaming experience and display relevant ads. Unity and Unity Ads may collect certain information to optimize advertising, such as approximate location data, user preferences, and device details.
+We use Unity and Unity Ads in “Horror Baby Granny” to enhance the gaming experience and display relevant ads. Unity and Unity Ads may collect certain information to optimize advertising, such as approximate location data, user preferences, and device details.
 <p>
 These services help us customize your gaming experience and provide ads that may interest you. We ensure the use of Unity and Unity Ads complies with the terms and privacy policies established by these platforms. (https://unity3d.com/legal/privacy-policy)
 <p>
 Processing of Your Information with Google AdMob
 <p>
-Apart from the previously mentioned services, we use Google AdMob in “sultanware” to display relevant in-game ads. Google AdMob may collect information such as device identifiers, approximate location data, and user preferences to offer personalized ads.
+Apart from the previously mentioned services, we use Google AdMob in “Horror Baby Granny” to display relevant in-game ads. Google AdMob may collect information such as device identifiers, approximate location data, and user preferences to offer personalized ads.
 <p>
-This integration allows us to provide ads that may interest you and contribute to the operation and maintenance of “sultanware”. We ensure that the use of Google AdMob complies with Google's terms and privacy policies.
+This integration allows us to provide ads that may interest you and contribute to the operation and maintenance of “Horror Baby Granny”. We ensure that the use of Google AdMob complies with Google's terms and privacy policies.
 <p>
 For more details on how Unity, Unity Ads, and Google AdMob handle your data, please review their respective privacy policies.
 <p>
 Retention of Your Information
 <p>
-We retain your information as long as you have an account in “sultanware”, deleting it after a specified period unless otherwise required by law.
+We retain your information as long as you have an account in “Horror Baby Granny”, deleting it after a specified period unless otherwise required by law.
 <p>
 Your Rights Regarding Your Information
 <p>
@@ -97,6 +97,6 @@ Notification of Changes
 <p>
 Any significant changes to this policy will be updated here.
 <p>
-Thank you for trusting “sultanware”. We're committed to protecting your privacy and enhancing your gaming experience.
+Thank you for trusting “Horror Baby Granny”. We're committed to protecting your privacy and enhancing your gaming experience.
 </body>
 </html>
